# git-gallery

./: .gitignore  Cargo.toml
assets/: reset.css  style.css
src/: cli.yml  config.rs  gallery.rs  main.rs
templates/: album.tera
